# Backend/src/api/auth.go
@@ -1,0 +1,46 @@
+package api
+
+import (
+	"fmt"
+	"github.com/gin-gonic/gin"
+	"github.com/golang-jwt/jwt/v5"
+	"net/http"
+	"os"
+	"time"
+)
+
+func RequireAuth(c *gin.Context) {
+	// Get the cookie off the request
+	tokenString := c.GetHeader("Authorization")
+
+	if tokenString == "" {
+		c.AbortWithStatus(http.StatusUnauthorized)
+	}
+
+	// Decode/validate it
+	token, _ := jwt.Parse(tokenString, func(token *jwt.Token) (interface{}, error) {
+		if _, ok := token.Method.(*jwt.SigningMethodHMAC); !ok {
+			return nil, fmt.Errorf("unexpected signing method: %v", token.Header["alg"])
+		}
+		return []byte(os.Getenv("token_secret")), nil
+	})
+
+	if claims, ok := token.Claims.(jwt.MapClaims); ok && token.Valid {
+		// Check the expiry date
+		if float64(time.Now().Unix()) > claims["exp"].(float64) {
+			c.AbortWithStatus(http.StatusUnauthorized)
+		}
+
+		// Find the user with token Subject
+		sub, exists := claims["nameid"]
+		if !exists {
+			c.AbortWithStatus(http.StatusUnauthorized)
+			return
+		}
+		// Attach the request
+		c.Set("user", sub)
+		c.Next()
+	} else {
+		c.AbortWithStatus(http.StatusUnauthorized)
+	}
+}
